- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 8
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta8

Fixes:

- None: None

New Commands:

- Plots:  new command add_area_series

Breaking Changes:

- None: None

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 7
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta7

Fixes:

- DataSources: Data sources now act consistent (added before or after a sourced widget) #56

New Commands:

- Fonts:  new command add_additional_font
- Styles: new command show_style_editor
- Styles: new command set_style_window_padding
- Styles: new command set_style_frame_padding
- Styles: new command set_style_item_spacing
- Styles: new command set_style_item_inner_spacing
- Styles: new command set_style_touch_extra_padding
- Styles: new command set_style_indent_spacing
- Styles: new command set_style_scrollbar_size
- Styles: new command set_style_grab_min_size
- Styles: new command set_style_window_border_size
- Styles: new command set_style_child_border_size
- Styles: new command set_style_popup_border_size
- Styles: new command set_style_frame_border_size
- Styles: new command set_style_tab_border_size
- Styles: new command set_style_window_rounding
- Styles: new command set_style_child_rounding
- Styles: new command set_style_frame_rounding
- Styles: new command set_style_popup_rounding
- Styles: new command set_style_scrollbar_rounding
- Styles: new command set_style_grab_rounding
- Styles: new command set_style_tab_rounding
- Styles: new command set_style_window_title_align
- Styles: new command set_style_window_menu_button_position
- Styles: new command set_style_color_button_position