@@ -35,6 +35,7 @@ Fixes:
 New Commands:
 
 - Plots:  new command add_area_series
+- Other:  new command set_main_window_title
 
 Breaking Changes:
 
